# RTMP_Push

app/: build.gradle
app/src/androidTest/java/com/zl/push/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/zl/push/: CameraHelper.java  MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/zl/push/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
